--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ eth-utils==1.0.2
 ethereum==1.6.1
 factory-boy==2.10.0
 faker==0.8.12
+firebase-admin==2.9.1
 gevent==1.2.2
 gunicorn==19.7.1
 psycopg2-binary==2.7.4
