--- a/docker/nginx/safe_service.conf
+++ b/docker/nginx/safe_service.conf
@@ -10,7 +10,7 @@
 upstream web {
   ip_hash;
   # server web:8000;
-  server unix:/safe-nginx/gunicorn.socket fail_timeout=0;
+  server unix:/nginx/gunicorn.socket fail_timeout=0;
 }
 
 server {
@@ -47,6 +47,6 @@ server {
   }
 
   location /static {
-        alias /safe-nginx/staticfiles;
+        alias /nginx/staticfiles;
   }
 }
