--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ env:
   global:
     - DATABASE_URL=psql://postgres@localhost/travisci
     - PIP_USE_MIRRORS=true
-addons:
-  ssh_known_hosts:
-  - gnosisdb-kovan.gnosis.pm
 services:
   - postgresql
 before_script:
@@ -21,3 +18,17 @@ script:
   - coverage run --source=gnosis-safe-push-service manage.py test --settings=config.settings.test
 after_success:
 - coveralls
+- # Create Docker image if branch master or develop and not on pull requests
+  if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    if [ "$TRAVIS_BRANCH" == "master" ]; then
+      docker build -t gnosis-safe-push-service -f docker/web/Dockerfile .;
+      docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+      docker tag gnosis-safe-push-service gnosispm/gnosis-safe-push-service:staging;
+      docker push gnosispm/gnosis-safe-push-service:staging;
+    elif [ "$TRAVIS_BRANCH" == "develop" ]; then
+      docker build -t gnosis-safe-push-service -f docker/web/Dockerfile .;
+      docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+      docker tag gnosis-safe-push-service gnosispm/gnosis-safe-push-service:develop;
+      docker push gnosispm/gnosis-safe-push-service:develop;
+    fi
+  fi
