--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 - pip install -r requirements.txt
 - pip install coveralls
 script:
-- coverage run --source=gnosis-safe-push-service manage.py test --settings=config.settings.test
+- coverage run manage.py test --settings=config.settings.test
 after_success:
 - coveralls
 - # Create Docker image if branch master or develop and not on pull requests
