--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DJANGO_SETTINGS_MODULE=config.settings.local
 C_FORCE_ROOT=true
 DEBUG=False
 DATABASE_URL=psql://postgres@db:5432/postgres
+REDIS_URL=redis://redis/0
