Fix celery configuration

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ C_FORCE_ROOT=true
 DEBUG=False
 DATABASE_URL=psql://postgres@db:5432/postgres
 REDIS_URL=redis://redis/0
+CELERY_BROKER_URL=redis://redis/0
