--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.0.4
 celery==4.1.0
+cryptography==2.2.2
 django-authtools==1.6.0
 django-cors-headers==2.2.0
 django-debug-toolbar==1.9.1
@@ -19,6 +20,5 @@ gevent==1.2.2
 gunicorn==19.7.1
 jsonschema==2.6.0
 psycopg2-binary==2.7.4
-pycrypto==2.6.1
 redis==2.10.6
 rlp==0.6.0
