--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PYTHONPATH=/app/safe_notification_service
 DJANGO_SETTINGS_MODULE=config.settings.local
 C_FORCE_ROOT=true
-DEBUG=False
+DEBUG=0
 DATABASE_URL=psql://postgres@db:5432/postgres
 REDIS_URL=redis://redis/0
 CELERY_BROKER_URL=redis://redis/0
