--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 Django==2.0.7
-celery==4.2.0
-cryptography==2.2.2
+celery==4.2.1
+cryptography==2.3
 django-authtools==1.6.0
 django-debug-toolbar==1.9.1
 django-environ==0.4.5
 django-filter==1.1.0
 django-model-utils==3.1.2
-django-rest-swagger==2.2.0
 djangorestframework-camel-case==1.0b1
 djangorestframework==3.8.2
 docutils==0.14
+drf-yasg[validation]==1.9.1
 ethereum==2.3.2
 factory-boy==2.11.1
 faker==0.8.17
-firebase-admin==2.11.0
+firebase-admin==2.12.0
 gevent==1.3.5
 gunicorn==19.9.0
 jsonschema==2.6.0
