--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,18 @@ env:
   - DOCKERHUB_PROJECT=safe-notification-service
   - SOURCE_FOLDER=safe_notification_service
   - PIP_USE_MIRRORS=true
+  - DJANGO_SETTINGS_MODULE=config.settings.test
   - DATABASE_URL=psql://postgres@localhost/travisci
 services:
   - postgresql
   - docker
 install:
-  - travis_retry pip install -r requirements.txt
+  - travis_retry pip install -r requirements-test.txt
   - travis_retry pip install coveralls
 before_script:
   - psql -c 'create database travisci;' -U postgres
 script:
-  - coverage run --source=$SOURCE_FOLDER manage.py test --settings=config.settings.test
+  - coverage run --source=$SOURCE_FOLDER -m py.test
 deploy:
   - provider: script
     script: bash scripts/deploy_docker.sh staging
@@ -33,6 +34,5 @@ deploy:
     on:
       tags: true
       all_branches: true
-
 after_success:
   - coveralls
