--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-Django==2.1.3
+Django==2.1.5
 celery==4.2.1
 cryptography==2.3
 django-authtools==1.6.0
-django-debug-toolbar==1.10.1
+django-debug-toolbar==1.11
 django-environ==0.4.5
-django-eth==0.2.4
 django-filter==2.0.0
 django-model-utils==3.1.2
 djangorestframework-camel-case==1.0b1
 djangorestframework==3.9.0
 docutils==0.14
-drf-yasg[validation]==1.11.0
+drf-yasg[validation]==1.12.1
 ethereum==2.3.2
 factory-boy==2.11.1
 faker==1.0.0
 firebase-admin==2.13.0
-gevent==1.3.7
+gevent==1.4.0
+gnosis-py==0.9.0
 gunicorn==19.9.0
 jsonschema==2.6.0
 psycopg2-binary==2.7.6.1
