--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
-pytest==4.0.0
-pytest-django==3.4.4
-pytest-sugar==0.9.2
-coverage==4.5.1
+pytest
+pytest-django
+pytest-sugar
+coverage
