--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-Django==2.1.5
+Django==2.1.7
 celery==4.2.1
 cryptography==2.3
 django-authtools==1.6.0
 django-debug-toolbar==1.11
 django-environ==0.4.5
-django-filter==2.0.0
+django-filter==2.1.0
 django-model-utils==3.1.2
-djangorestframework-camel-case==1.0b1
-djangorestframework==3.9.0
+djangorestframework-camel-case==1.0.3
+djangorestframework==3.9.1
 docutils==0.14
-drf-yasg[validation]==1.12.1
+drf-yasg[validation]==1.13.0
 ethereum==2.3.2
 factory-boy==2.11.1
-faker==1.0.0
-firebase-admin==2.13.0
+faker==1.0.2
+firebase-admin==2.15.1
 gevent==1.4.0
 gnosis-py==0.9.0
 gunicorn==19.9.0
 jsonschema==2.6.0
-psycopg2-binary==2.7.6.1
+psycopg2-binary==2.7.7
 redis==2.10.6
