--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
-pytest
-pytest-django
-pytest-sugar
-coverage
+pytest==4.2.1
+pytest-django==3.4.7
+pytest-sugar==0.9.2
+coverage==4.5.1
