--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==2.2.1
+Django==2.2.2
 celery==4.3.0
 cryptography==2.3
 django-authtools==1.6.0
@@ -7,16 +7,17 @@ django-environ==0.4.5
 django-filter==2.1.0
 django-model-utils==3.1.2
 djangorestframework-camel-case==1.0.3
-djangorestframework==3.9.3
+djangorestframework==3.9.4
 docutils==0.14
-drf-yasg[validation]==1.15.0
+drf-yasg[validation]==1.16.0
 ethereum==2.3.2
-factory-boy==2.11.1
-faker==1.0.5
-firebase-admin==2.16.0
+factory-boy==2.12.0
+faker==1.0.7
+firebase-admin==2.17.0
 gevent==1.4.0
-gnosis-py==1.1.3
+gnosis-py==1.3.11
 gunicorn==19.9.0
 jsonschema==2.6.0
-psycopg2-binary==2.8.2
+psycopg2-binary==2.8.3
 redis==3.2.1
+requests==2.22.0
