--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
-Django==2.2.2
+Django==2.2.5
 celery==4.3.0
 cryptography==2.3
-django-authtools==1.6.0
+django-authtools==1.7.0
 django-debug-toolbar==1.11
 django-environ==0.4.5
 django-filter==2.1.0
 django-model-utils==3.1.2
-djangorestframework-camel-case==1.0.3
-djangorestframework==3.9.4
+djangorestframework-camel-case==1.1.1
+djangorestframework==3.10.3
 docutils==0.14
-drf-yasg[validation]==1.16.0
+drf-yasg[validation]==1.16.1
 ethereum==2.3.2
 factory-boy==2.12.0
 faker==1.0.7
 firebase-admin==2.17.0
 gevent==1.4.0
-gnosis-py==1.3.11
+gnosis-py==1.4.3
 gunicorn==19.9.0
 jsonschema==2.6.0
 psycopg2-binary==2.8.3
 redis==3.2.1
 requests==2.22.0
+web3==4.9.2
