--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==3.0.3
-celery==4.4.0
+Django==3.0.4
+celery==4.4.2
 cryptography==2.8
 django-authtools==1.7.0
 django-debug-toolbar==2.2
@@ -9,15 +9,14 @@ django-model-utils==4.0.0
 djangorestframework-camel-case==1.1.2
 djangorestframework==3.11.0
 docutils==0.14
-drf-yasg[validation]==1.17.0
+drf-yasg[validation]==1.17.1
 ethereum==2.3.2
 factory-boy==2.12.0
 firebase-admin==4.0.0
-gevent==1.4.0
-gnosis-py==2.1.1
-gunicorn==20.0.4
+gnosis-py==2.3.2
+gunicorn[gevent]==20.0.4
 jsonschema==3.2.0
 psycopg2-binary==2.8.4
 redis==3.4.1
-requests==2.22.0
-web3==5.5.1
+requests==2.23.0
+web3==5.7.0
