Update docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,20 @@ volumes:
 
 services:
   nginx:
-    image: nginx:1.13-alpine
+    image: nginx:1.17-alpine
     hostname: nginx
     ports:
       - "8000:8000"
     volumes:
-      - ./docker/nginx:/etc/nginx/conf.d
+      - ./docker/nginx/safe_service.conf:/etc/nginx/nginx.conf:ro
       - nginx-shared:/nginx
     depends_on:
       - web
+  redis:
+    image: redis:5-alpine
+    ports:
+      - "6379:6379"
+
   db:
     image: postgres:10-alpine
     ports:
@@ -34,9 +39,6 @@ services:
     volumes:
       - nginx-shared:/nginx
     command: docker/web/run_web.sh
-
-  redis:
-    image: redis:4-alpine
 
   worker: &worker
     build:
