Fix some warnings

--- a/.env_local
+++ b/.env_local
@@ -2,6 +2,6 @@ PYTHONPATH=/app/safe_notification_service
 DJANGO_SETTINGS_MODULE=config.settings.test
 C_FORCE_ROOT=true
 DEBUG=0
-DATABASE_URL=psql://postgres@localhost:5432/postgres
+DATABASE_URL=psql://postgres:postgres@localhost:5432/postgres
 REDIS_URL=redis://localhost/0
 CELERY_BROKER_URL=redis://localhost/0
