--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -75,26 +75,43 @@ jobs:
   docker-deploy:
     runs-on: ubuntu-latest
     needs: test-app
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'release' && github.event.action == 'released'
     steps:
-    - uses: actions/checkout@v2
-    - name: Dockerhub login
-      uses: docker/login-action@v1
+    - name: Checkout
+      uses: actions/checkout@v2.4.0
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1.6.0
+    - name: Cache Docker layers
+      uses: actions/cache@v2.1.6
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+    - name: Set tag (release)
+        # Set the tag versions as Docker tag if it is a release event
+        if: github.event_name == 'release' && github.event.action == 'released'
+        run: echo "DOCKER_TAG=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+    - name: Login to DockerHub
+      uses: docker/login-action@v1.10.0
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Deploy Master
-      if: github.ref == 'refs/heads/master'
-      run: bash scripts/deploy_docker.sh staging
-      env:
-        DOCKERHUB_PROJECT: safe-notification-service
-    - name: Deploy Develop
-      if: github.ref == 'refs/heads/develop'
-      run: bash scripts/deploy_docker.sh develop
-      env:
-        DOCKERHUB_PROJECT: safe-notification-service
-    - name: Deploy Tag
-      if: startsWith(github.ref, 'refs/tags/')
-      run: bash scripts/deploy_docker.sh ${GITHUB_REF##*/}
-      env:
-        DOCKERHUB_PROJECT: safe-notification-service
+    - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2.7.0
+        with:
+          context: .
+          push: true
+          tags: gnosispm/safe-notification-service:${{ env.DOCKER_TAG }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+    - # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
