--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,5 +1,9 @@
 name: Python CI
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+  release:
+    types: [ released ]
 
 jobs:
   test-app:
