--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -122,7 +122,7 @@ jobs:
       run: echo ${{ steps.docker_build.outputs.digest }}
   autodeploy:
     runs-on: ubuntu-latest
-    needs: [test-app, docker-deploy]
+    needs: [docker-deploy]
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v2
